# Anchorkit-1

./: .gitignore  CONTRIBUTING.md  Cargo.toml  DELIVERY_SUMMARY.md  DEVELOPER_PANEL_SUMMARY.md  DEV_PANEL_GUIDE.md  FINAL_SUMMARY.txt  IMPLEMENTATION_CHECKLIST.md  INTEGRATION_CHECKLIST.md  LICENSE  README.md  README_SDK.md  SDK_DELIVERY.md  START_HERE.md  WINDOWS_SETUP.md  rust-toolchain.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml  mutation-testing.yml
cli/: Cargo.toml
cli/src/: args.rs  display.rs  error.rs  main.rs  repl.rs  rpc.rs
cli/src/discovery/: info.rs  mod.rs  seps.rs  stellar_toml.rs
dev-panel/: .gitignore  QUICKSTART.md  README.md  package.json  tsconfig.json
dev-panel/src/: index.ts  types.ts
docs/: cli.md  mutation-testing.md  platform-quirks.md  revocation-notification-design.md  sha256-performance.md  storage-rent-cost-analysis.md  wasm-size.md
observability/: README.md  status-monitor.html
scripts/: ci_preflight_check.sh
sdk/: .gitignore  ARCHITECTURE.md  FLOW_DIAGRAM.md  IMPLEMENTATION.md  INDEX.md  QUICK_START.md  README.md  package.json  tsconfig.app.json  tsconfig.json  vite.config.ts
sdk/.storybook/: main.ts
sdk/src/: index.ts
sdk/src/services/: sep10.ts
src/: admin_tests.rs  attest_batch_tests.rs  attest_tests.rs  attestor_stress_tests.rs  attestor_tests.rs  batch_gas_benchmark.rs  contract.rs  domain_validator.rs  errors.rs  events.rs  hash.rs  hash_benchmark.rs  lib.rs  pause_tests.rs  renew_attestation_tests.rs  revoke_tests.rs  storage.rs  storage_ttl_tests.rs  test_util.rs  types.rs
test_snapshots/admin_tests/: set_admin_transfers_control.1.json
test_snapshots/attest_batch_tests/: attest_batch_emits_one_event_per_entry.1.json  attest_batch_fails_when_paused.1.json  attest_batch_stores_every_entry.1.json  empty_batch_is_rejected.1.json  invalid_entry_fails_the_whole_batch.1.json  unauthenticated_attest_batch_fails.1.json
test_snapshots/attest_tests/: a_new_attest_call_overwrites_the_prior_attestation_for_the_same_type.1.json  attest_fails_for_unregistered_attestor.1.json  attest_fails_when_paused.1.json  attest_fails_with_zero_ttl.1.json  attest_stores_attestation_and_is_valid.1.json  get_attestation_returns_not_found_for_missing.1.json  is_valid_false_after_expiry.1.json  is_valid_false_exactly_at_expires_at.1.json
test_snapshots/attestor_tests/: add_attestor_registers.1.json  cannot_remove_unregistered_attestor.1.json  non_admin_cannot_renew_attestor.1.json  remove_attestor_deregisters.1.json  renew_attestor_keeps_registration_active.1.json
test_snapshots/batch_gas_benchmark/: attest_batch_stays_under_the_ledger_write_ceiling.1.json  (+12 more)
webhook-sdk/: Cargo.toml  README.md
webhook-sdk/src/: dead_letter.rs  delivery.rs  errors.rs  idempotency.rs  lib.rs  monitor.rs  processor.rs  retry.rs  types.rs
webhook-sdk/tests/: idempotency_tests.rs  integration_tests.rs
(+25 files in other folders)
