[workspace]
members = [".", "webhook-sdk"]
resolver = "2"

[package]
name = "anchorkit"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# Gates the allow-list stress benchmark (see src/attestor_stress_tests.rs) so
# it doesn't run as part of a normal `cargo test`. Enable it explicitly with:
#   cargo test --release --features stress-tests allow_list_scaling -- --nocapture
stress-tests = []

[dependencies]
soroban-sdk = "26.1.0"

[dev-dependencies]
soroban-sdk = { version = "26.1.0", features = ["testutils"] }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
strip = true
