[package]
name = "anchorkit-cli"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Developer CLI for AnchorKit: anchor discovery and other off-chain tooling."

[[bin]]
name = "anchorkit"
path = "src/main.rs"

[dependencies]
anchorkit = { path = ".." }
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
